Change @protobuf to @protobuf_archive
And reformat with clang-format and additional cleanup

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow/contrib/s3/BUILD
+++ b/tensorflow/contrib/s3/BUILD
@@ -30,7 +30,7 @@ cc_binary(
     linkshared = 1,
     deps = [
         "@curl//:curl",
-        "@protobuf//:protobuf_headers",
+        "@protobuf_archive//:protobuf_headers",
         "//tensorflow/core:framework_headers_lib",
         "//external:aws",
     ],
