--- a/tensorflow/contrib/s3/BUILD
+++ b/tensorflow/contrib/s3/BUILD
@@ -15,10 +15,10 @@ load(
 cc_binary(
     name = "s3_file_system.so",
     srcs = [
-        "s3_file_system.cc",
-        "s3_file_system.h",
         "s3_crypto.cc",
         "s3_crypto.h",
+        "s3_file_system.cc",
+        "s3_file_system.h",
     ],
     copts = ["-Wno-sign-compare"],
     defines = select({
@@ -29,10 +29,10 @@ cc_binary(
     }),
     linkshared = 1,
     deps = [
+        "//tensorflow/core:framework_headers_lib",
+        "@aws//:aws",
         "@curl//:curl",
         "@protobuf_archive//:protobuf_headers",
-        "//tensorflow/core:framework_headers_lib",
-        "//external:aws",
     ],
 )
 
@@ -47,7 +47,8 @@ cc_library(
     deps = [
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
-        "//external:aws",
+        "@aws//:aws",
+        "@boringssl//:crypto",
     ],
     alwayslink = 1,
 )
@@ -64,7 +65,7 @@ cc_library(
         ":s3_crypto",
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
-        "//external:aws",
+        "@aws//:aws",
     ],
     alwayslink = 1,
 )
@@ -75,12 +76,15 @@ tf_cc_test(
     srcs = [
         "s3_file_system_test.cc",
     ],
+    tags = [
+        "manual",
+    ],
     deps = [
         ":s3_file_system",
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core:test",
         "//tensorflow/core:test_main",
-        "//external:aws",
+        "@aws//:aws",
     ],
 )
