--- a/tensorflow/tools/pip_package/BUILD
+++ b/tensorflow/tools/pip_package/BUILD
@@ -70,32 +70,52 @@ py_binary(
 py_binary(
     name = "simple_console_for_windows",
     srcs = ["simple_console_for_windows.py"],
+    data = [":pip_files"],
+    srcs_version = "PY2AND3",
+    deps = ["//tensorflow:tensorflow_py"],
+)
+
+filegroup(
+    name = "pip_files",
     data = [
         "MANIFEST.in",
         "README",
         "setup.py",
         ":included_headers",
+        ":licenses",
+        ":simple_console",
+        "//tensorflow:tensorflow_py",
+        "//tensorflow/contrib/boosted_trees:boosted_trees_pip",
+        "//tensorflow/contrib/cluster_resolver:cluster_resolver_pip",
+        "//tensorflow/contrib/gan",
+        "//tensorflow/contrib/graph_editor:graph_editor_pip",
+        "//tensorflow/contrib/keras",
+        "//tensorflow/contrib/labeled_tensor:labeled_tensor_pip",
+        "//tensorflow/contrib/ndlstm",
         "//tensorflow/contrib/nn:nn_py",
+        "//tensorflow/contrib/predictor:predictor_pip",
+        "//tensorflow/contrib/receptive_field:receptive_field_pip",
         "//tensorflow/contrib/session_bundle:session_bundle_pip",
         "//tensorflow/contrib/signal:signal_py",
+        "//tensorflow/contrib/slim",
         "//tensorflow/contrib/slim/python/slim/data:data_pip",
+        "//tensorflow/contrib/slim/python/slim/nets:nets_pip",
+        "//tensorflow/contrib/specs",
+        "//tensorflow/contrib/tensor_forest:init_py",
+        "//tensorflow/contrib/tensor_forest/hybrid:hybrid_pip",
+        "//tensorflow/contrib/timeseries:timeseries_pip",
+        "//tensorflow/contrib/tpu",
+        "//tensorflow/examples/tutorials/mnist:package",
+        "//tensorflow/python:distributed_framework_test_lib",
+        "//tensorflow/python:meta_graph_testdata",
+        "//tensorflow/python:spectral_ops_test_util",
         "//tensorflow/python:util_example_parser_configuration",
         "//tensorflow/python/debug:debug_pip",
-        "//tensorflow/python/saved_model",
-        "//tensorflow/python:spectral_ops_test_util",
-        "//tensorflow/python/tools:tools_pip",
         "//tensorflow/python/eager:eager_pip",
-        # These targets don't build on Windows yet. Exclude them for now.
-        # "//tensorflow/contrib/ndlstm",
-        # "//tensorflow/contrib/slim",
-        # "//tensorflow/contrib/slim/python/slim/nets:nets_pip",
-        # "//tensorflow/contrib/specs",
-        # "//tensorflow/contrib/tensor_forest:init_py",
-        # "//tensorflow/contrib/tensor_forest/hybrid:hybrid_pip",
-        # "//tensorflow/examples/tutorials/mnist:package",
+        "//tensorflow/python/saved_model",
+        "//tensorflow/python/tools:tools_pip",
+        "//tensorflow/tools/dist_test/server:grpc_tensorflow_server",
     ],
-    srcs_version = "PY2AND3",
-    deps = ["//tensorflow:tensorflow_py"],
 )
 
 filegroup(
@@ -142,44 +162,6 @@ sh_binary(
     data = select({
         "//tensorflow:windows": [":simple_console_for_windows"],
         "//tensorflow:windows_msvc": [":simple_console_for_windows"],
-        "//conditions:default": [
-            ":licenses",
-            "MANIFEST.in",
-            "README",
-            "setup.py",
-            ":included_headers",
-            ":simple_console",
-            "//tensorflow:tensorflow_py",
-            "//tensorflow/contrib/boosted_trees:boosted_trees_pip",
-            "//tensorflow/contrib/cluster_resolver:cluster_resolver_pip",
-            "//tensorflow/contrib/gan:gan",
-            "//tensorflow/contrib/graph_editor:graph_editor_pip",
-            "//tensorflow/contrib/keras:keras",
-            "//tensorflow/contrib/labeled_tensor:labeled_tensor_pip",
-            "//tensorflow/contrib/ndlstm:ndlstm",
-            "//tensorflow/contrib/nn:nn_py",
-            "//tensorflow/contrib/predictor:predictor_pip",
-            "//tensorflow/contrib/receptive_field:receptive_field_pip",
-            "//tensorflow/contrib/session_bundle:session_bundle_pip",
-            "//tensorflow/contrib/signal:signal_py",
-            "//tensorflow/contrib/slim:slim",
-            "//tensorflow/contrib/slim/python/slim/data:data_pip",
-            "//tensorflow/contrib/slim/python/slim/nets:nets_pip",
-            "//tensorflow/contrib/specs:specs",
-            "//tensorflow/contrib/tensor_forest:init_py",
-            "//tensorflow/contrib/tensor_forest/hybrid:hybrid_pip",
-            "//tensorflow/contrib/timeseries:timeseries_pip",
-            "//tensorflow/contrib/tpu",
-            "//tensorflow/examples/tutorials/mnist:package",
-            "//tensorflow/python:distributed_framework_test_lib",
-            "//tensorflow/python:meta_graph_testdata",
-            "//tensorflow/python:spectral_ops_test_util",
-            "//tensorflow/python:util_example_parser_configuration",
-            "//tensorflow/python/debug:debug_pip",
-            "//tensorflow/python/eager:eager_pip",
-            "//tensorflow/python/saved_model:saved_model",
-            "//tensorflow/python/tools:tools_pip",
-            "//tensorflow/tools/dist_test/server:grpc_tensorflow_server",
-        ],
+        "//conditions:default": [":pip_files"],
     }) + if_mkl(["//third_party/mkl:intel_binary_blob"]),
 )
