--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -547,6 +547,7 @@ tf_gen_op_libs(
         "functional_ops",
         "image_ops",
         "io_ops",
+        "jvm_ops",
         "linalg_ops",
         "lookup_ops",
         "logging_ops",
@@ -627,6 +628,7 @@ cc_library(
         ":functional_ops_op_lib",
         ":image_ops_op_lib",
         ":io_ops_op_lib",
+        ":jvm_ops_op_lib",
         ":linalg_ops_op_lib",
         ":lookup_ops_op_lib",
         ":logging_ops_op_lib",
@@ -758,6 +760,7 @@ cc_library(
         "//tensorflow/core/kernels:function_ops",
         "//tensorflow/core/kernels:image",
         "//tensorflow/core/kernels:io",
+        "//tensorflow/core/kernels:jvm",
         "//tensorflow/core/kernels:linalg",
         "//tensorflow/core/kernels:lookup",
         "//tensorflow/core/kernels:logging",
