MKL-DNN conv and build integration

--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -1645,7 +1645,10 @@ tf_cuda_library(
         "//tensorflow/core/platform/default/build_config:platformlib",
         "//tensorflow/core/kernels:bounds_check",
         "//third_party/eigen3",
-    ] + if_mkl(["//third_party/mkl:intel_binary_blob"]),
+    ] + if_mkl([
+        "//third_party/mkl:intel_binary_blob",
+        "@mkl_dnn//:mkl_dnn",
+    ]),
     alwayslink = 1,
 )
 
@@ -1845,27 +1848,29 @@ tf_cuda_library(
         "common_runtime/visitable_allocator.h",
         "graph/gradients.h",
         "graph/quantize_training.h",
-    ],
+    ] + if_mkl(["graph/mkl_graph_util.h"]),
     copts = tf_copts(),
     deps = [
-               ":core_cpu_base",
-               ":framework",
-               ":framework_internal",
-               ":function_ops_op_lib",
-               ":functional_grad",
-               ":functional_ops_op_lib",
-               ":lib",
-               ":lib_internal",
-               ":proto_text",
-               ":protos_all_cc",
-               "//tensorflow/core/grappler:grappler_item",
-               "//tensorflow/core/grappler/clusters:utils",
-               "//tensorflow/core/grappler/clusters:virtual_cluster",
-               "//tensorflow/core/grappler/optimizers:meta_optimizer",
-               "//third_party/eigen3",
-               "//tensorflow/core/kernels:required",
-           ] + if_mkl(["//third_party/mkl:intel_binary_blob"]) +
-           tf_additional_core_deps(),
+        ":core_cpu_base",
+        ":framework",
+        ":framework_internal",
+        ":function_ops_op_lib",
+        ":functional_grad",
+        ":functional_ops_op_lib",
+        ":lib",
+        ":lib_internal",
+        ":proto_text",
+        ":protos_all_cc",
+        "//tensorflow/core/grappler:grappler_item",
+        "//tensorflow/core/grappler/clusters:utils",
+        "//tensorflow/core/grappler/clusters:virtual_cluster",
+        "//tensorflow/core/grappler/optimizers:meta_optimizer",
+        "//third_party/eigen3",
+        "//tensorflow/core/kernels:required",
+    ] + if_mkl([
+        "//third_party/mkl:intel_binary_blob",
+        "@mkl_dnn//:mkl_dnn",
+    ]) + tf_additional_core_deps(),
     alwayslink = 1,
 )
 
