Fixing up build

--- a/tensorflow/contrib/framework/BUILD
+++ b/tensorflow/contrib/framework/BUILD
@@ -31,7 +31,6 @@ tf_custom_op_py_library(
         "python/ops/audio_ops.py",
         "python/ops/checkpoint_ops.py",
         "python/ops/accumulate_n_v2.py",
-        "python/ops/accumulate_n_v2_grad.py",
         "python/ops/ops.py",
         "python/ops/prettyprint_ops.py",
         "python/ops/variables.py",
@@ -41,7 +40,6 @@ tf_custom_op_py_library(
         ":python/ops/_accumulate_n_v2_op.so",
     ],
     kernels = [
-        ":accumulate_n_v2_kernels",
         ":accumulate_n_v2_op_lib",
         ":variable_kernels",
         ":variable_ops_op_lib",
@@ -104,19 +102,9 @@ tf_custom_op_library(
     ],
 )
 
-
-tf_kernel_library(
-    name = "accumulate_n_v2_kernels",
-    srcs = [
-        "kernels/accumulate_n_optimizer.cc",
-    ],
-    deps = [
-        "//tensorflow/core:framework",
-        "//tensorflow/core:core",
-    ],
-    alwayslink = 1,
-)
-
+# No kernels to build for the "AccumulateNV2" op; a rewrite in
+# tensorflow/core/common_runtime/accumulate_n_optimizer.cc converts instances
+# of the op into a graph of lower-level ops.
 
 tf_custom_op_library(
     name = "python/ops/_accumulate_n_v2_op.so",
@@ -124,9 +112,26 @@ tf_custom_op_library(
         "ops/accumulate_n_v2_op.cc",
     ],
     deps = [
-        #"//tensorflow/contrib/framework:accumulate_n_v2_kernels"
     ],
 )
+
+#cc_binary(
+#    name = "python/ops/_accumulate_n_v2_op.so",
+#    srcs = [
+#        "ops/accumulate_n_v2_op.cc",
+#        "kernels/accumulate_n_optimizer.cc",
+#    ],
+#    deps = [
+#        #"//tensorflow/core:framework",
+#        "//tensorflow/core:core",
+#        #"//tensorflow/core:framework_headers_lib",
+#
+#        "@protobuf_archive//:protobuf_headers",
+#        "@nsync//:nsync_headers",
+#        "//third_party/eigen3",
+#    ],
+#    linkshared=1,
+#)
 
 
 tf_gen_op_libs(
