Enable TaskCluster branch-filtering
Fixes https://github.com/mozilla/DeepSpeech/issues/861

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -17,6 +17,8 @@ tasks:
           - pull_request.synchronize
           - pull_request.reopened
           - push
+        branches:
+          - master
 
     scopes: [
       "queue:create-task:lowest:{{ taskcluster.docker.provisionerId }}/deepspeech-worker",
