--- a/tensorflow/contrib/makefile/Makefile
+++ b/tensorflow/contrib/makefile/Makefile
@@ -87,7 +87,6 @@ HOST_INCLUDES += -I/usr/local/include
 
 HOST_LIBS := \
 $(HOST_NSYNC_LIB) \
-$(HOST_DOUBLE_CONVERSION_LIB) \
 -lstdc++ \
 -lprotobuf \
 -lpthread \
@@ -114,7 +113,9 @@ PROTO_TEXT := $(HOST_BINDIR)proto_text
 # The list of dependencies is derived from the Bazel build file by running
 # the gen_file_lists.sh script on a system with a working Bazel setup.
 PROTO_TEXT_CC_FILES := $(shell cat $(MAKEFILE_DIR)/proto_text_cc_files.txt)
-PROTO_TEXT_PB_CC_LIST := $(shell cat $(MAKEFILE_DIR)/proto_text_pb_cc_files.txt)
+PROTO_TEXT_PB_CC_LIST := \
+	$(shell cat $(MAKEFILE_DIR)/proto_text_pb_cc_files.txt) \
+	$(wildcard tensorflow/contrib/makefile/downloads/double_conversion/double-conversion/*.cc)
 PROTO_TEXT_PB_H_LIST := $(shell cat $(MAKEFILE_DIR)/proto_text_pb_h_files.txt)
 
 # Locations of the intermediate files proto_text generates.
@@ -172,7 +173,6 @@ INCLUDES += -I/usr/local/include
 
 LIBS := \
 $(TARGET_NSYNC_LIB) \
-$(HOST_DOUBLE_CONVERSION_LIB) \
 -lstdc++ \
 -lprotobuf \
 -lz \
@@ -269,7 +269,6 @@ ifeq ($(TARGET),ANDROID)
 
 	LIBS := \
 $(TARGET_NSYNC_LIB) \
-$(HOST_DOUBLE_CONVERSION_LIB) \
 -lgnustl_static \
 -lprotobuf \
 -llog \
@@ -475,6 +474,7 @@ $(wildcard tensorflow/core/platform/*/*.cc) \
 $(wildcard tensorflow/core/platform/*/*/*.cc) \
 $(wildcard tensorflow/core/util/*.cc) \
 $(wildcard tensorflow/core/util/*/*.cc) \
+$(wildcard tensorflow/contrib/makefile/downloads/double_conversion/double-conversion/*.cc) \
 tensorflow/core/util/version_info.cc
 # Remove duplicates (for version_info.cc)
 CORE_CC_ALL_SRCS := $(sort $(CORE_CC_ALL_SRCS))
