TST: add init value

--- a/tensorflow/python/BUILD
+++ b/tensorflow/python/BUILD
@@ -4021,6 +4021,7 @@ cuda_py_test(
         ":framework_for_generated_wrappers",
         ":nn_grad",
         ":nn_ops",
+        "//third_party/py/numpy",
     ],
 )
 
