Half migrated to manip
Half migrated to tf.manip

--- a/tensorflow/core/BUILD
+++ b/tensorflow/core/BUILD
@@ -573,6 +573,7 @@ tf_gen_op_libs(
         "linalg_ops",
         "lookup_ops",
         "logging_ops",
+        "manip_ops",
         "math_ops",
         "nn_ops",
         "no_op",
@@ -653,6 +654,7 @@ cc_library(
         ":linalg_ops_op_lib",
         ":logging_ops_op_lib",
         ":lookup_ops_op_lib",
+        ":manip_ops_op_lib",
         ":math_ops_op_lib",
         ":nn_ops_op_lib",
         ":no_op_op_lib",
@@ -786,6 +788,7 @@ cc_library(
         "//tensorflow/core/kernels:linalg",
         "//tensorflow/core/kernels:lookup",
         "//tensorflow/core/kernels:logging",
+        "//tensorflow/core/kernels:manip",
         "//tensorflow/core/kernels:math",
         "//tensorflow/core/kernels:multinomial_op",
         "//tensorflow/core/kernels:nn",
