Use CUB for histogram bincount when weight = 1.
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -3152,7 +3152,7 @@ tf_kernel_library(
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//third_party/eigen3",
-    ],
+    ]+ if_cuda(["@cub_archive//:cub"]),
 )
 
 tf_kernel_library(
