--- a/tensorflow/tools/docker/Dockerfile.devel-gpu-cuda9-cudnn7
+++ b/tensorflow/tools/docker/Dockerfile.devel-gpu-cuda9-cudnn7
@@ -4,7 +4,7 @@ MAINTAINER Gunhan Gulsoy <gunan@google.com>
 
 # It is possible to override these for releases.
 ARG TF_BRANCH=master
-ARG BAZEL_VERSION=0.6.1
+ARG BAZEL_VERSION=0.5.4
 ARG TF_AVAILABLE_CPUS=32
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -19,7 +19,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         pkg-config \
         python-dev \
         python-pip \
-        python-wheel \
         rsync \
         software-properties-common \
         unzip \
@@ -43,6 +42,7 @@ RUN pip --no-cache-dir install \
         scipy \
         sklearn \
         pandas \
+        wheel \
         && \
     python -m ipykernel.kernelspec
 
@@ -80,7 +80,7 @@ RUN git clone https://github.com/tensorflow/tensorflow.git && \
     git checkout ${TF_BRANCH}
 WORKDIR /tensorflow
 
-# Tell TensorFlow how to configure the build, in detail.
+# Configure the build for our CUDA configuration.
 ENV CI_BUILD_PYTHON=python \
     LD_LIBRARY_PATH=/usr/local/cuda/extras/CUPTI/lib64:${LD_LIBRARY_PATH} \
     CUDNN_INSTALL_PATH=/usr/lib/x86_64-linux-gnu \
@@ -89,22 +89,12 @@ ENV CI_BUILD_PYTHON=python \
     TF_NEED_CUDA=1 \
     TF_CUDA_VERSION=9.0 \
     TF_CUDA_COMPUTE_CAPABILITIES=3.0,3.5,5.2,6.0,6.1,7.0 \
-    TF_CUDNN_VERSION=7 \
-    TF_NEED_JEMALLOC=1 \
-    TF_NEED_GCP=0 \
-    TF_NEED_HDFS=0 \
-    TF_ENABLE_XLA=1 \
-    TF_NEED_GDR=0 \
-    TF_NEED_VERBS=0 \
-    TF_NEED_OPENCL=0 \
-    TF_NEED_S3=0 \
-    TF_CUDA_CLANG=0 \
-    TF_NEED_MPI=0
+    TF_CUDNN_VERSION=7
+RUN ./configure
 
-# Configure, Build and Install TensorFlow.
+# Build and Install TensorFlow.
 RUN ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
     LD_LIBRARY_PATH=/usr/local/cuda/lib64/stubs:${LD_LIBRARY_PATH} \
-    tensorflow/tools/ci_build/builds/configured GPU \
     bazel build -c opt \
                 --config=cuda \
                 --cxxopt="-D_GLIBCXX_USE_CXX11_ABI=0" \
@@ -113,10 +103,10 @@ RUN ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/lib
     mkdir /pip_pkg && \
     bazel-bin/tensorflow/tools/pip_package/build_pip_package /pip_pkg
 
+# Clean up pip wheel and Bazel cache when done.
 RUN pip --no-cache-dir install --upgrade /pip_pkg/tensorflow-*.whl && \
     rm -rf /pip_pkg && \
     rm -rf /root/.cache
-# Clean up pip wheel and Bazel cache when done.
 
 WORKDIR /root
 
