Use unsorted_segment_sum when weights.size() != 0
Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow/core/kernels/BUILD
+++ b/tensorflow/core/kernels/BUILD
@@ -3152,6 +3152,7 @@ tf_kernel_library(
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//third_party/eigen3",
+        ":segment_reduction_ops",
     ]+ if_cuda(["@cub_archive//:cub"]),
 )
 
